Fix layout issues in form view with content link view present

--- a/packages/ckeditor5-coremedia-link/theme/contentlinkview.css
+++ b/packages/ckeditor5-coremedia-link/theme/contentlinkview.css
@@ -8,7 +8,7 @@
 
 .ck.cm-ck-link-form-view .cm-ck-content-link-view {
   display: flex;
-  width: var(--ck-input-text-width);
+  width: 100%;
   border: 1px solid var(--ck-color-input-disabled-border);
   border-radius: var(--ck-border-radius);
 }
@@ -56,6 +56,8 @@
 .ck.cm-ck-link-form-view .cm-ck-content-link-view-wrapper {
   position: relative;
   margin-left: 0 !important;
+  flex: 1;
+  /*display: inline-block !important;*/
 }
 
 .cm-ck-content-link-view-wrapper .cm-ck-content-link-view > .ck.ck-button {
